Fix header overlap on post pages.
props @cfinke

--- a/css/post.css
+++ b/css/post.css
@@ -5,6 +5,7 @@ header {
 	background-color: rgb(38, 37, 38);
 	position: fixed;
 	top: 0;
+	z-index: 2;
 }
 header h1 {
 	font-size: 2.5em;
